fixed nav alignment issues

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -101,8 +101,8 @@ a {
   color: black;
 }
 
-@media only screen and (max-width: 600px) {
+/* @media only screen and (max-width: 600px) {
   .nav_menu_container {
     margin-top: 2rem;
   }
-}
+} */
